fix horizontal scroll

--- a/blocks/product/__image/_type/product__image_type_revers.css
+++ b/blocks/product/__image/_type/product__image_type_revers.css
@@ -1,6 +1,8 @@
 .product__image_type_revers {
   margin-left: 70px;
   margin-right: 0px;
+  
+  overflow: hidden;
 }
 
 @media screen and (max-width: 1024px) {
