--- a/blocks/product/__image/product__image.css
+++ b/blocks/product/__image/product__image.css
@@ -4,6 +4,7 @@
   width: 735px;
   height: 565px;
   object-fit: cover;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 1024px) {
