--- a/blocks/product/_type/product_type_revers.css
+++ b/blocks/product/_type/product_type_revers.css
@@ -6,5 +6,4 @@
   position: relative;
   z-index: 1;
   padding-right: 0px;
-  padding-left: 10px;
 }
