--- a/blocks/product/product.css
+++ b/blocks/product/product.css
@@ -5,7 +5,6 @@
   align-items: center;  
   position: relative;
   z-index: 1;
-  padding-right: 10px;
 }
 
 .product:last-of-type {
